Fix title margins on small screens

--- a/default_style.css
+++ b/default_style.css
@@ -45,7 +45,7 @@ header {
 }
 
 .title {
-	margin: 32px
+	margin: 32px 0 32px 0;
 }
 
 .title-img{
